# opengl-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  vcpkg-configuration.json  vcpkg.json
cmake/: ShaderString.cmake
libs/glad/: glad.c  glad.h
src/: main.cpp
src/core/: event_dispatcher.h  events.h  geometry.cpp  geometry.h  image.h  mesh.cpp  mesh.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  shader.cpp  shader.h  shaders.cpp  shaders.h  texture2d.cpp  texture2d.h  timer.h  window.cpp  window.h
src/geometries/: box_geometry.cpp  box_geometry.h  plane_geometry.cpp  plane_geometry.h
src/loaders/: image_loader.cpp  image_loader.h  loader.h
src/mesh/: cube.h
src/resources/: orbit_controls.cpp  orbit_controls.h
src/shaders/: fragment.frag  scene.frag  scene.vert  vertex.vert
